--- a/templates/readme.html
+++ b/templates/readme.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Documentation — DNS Resolver</title>
+  <title>Documentation - DNS Resolver</title>
+  <link rel="stylesheet" href="/static/css/style.css">
+
   <style>
     body {
       background: #121212;
@@ -47,6 +49,8 @@
   </style>
 </head>
 <body>
+  {% include '_header.html' %}
+
 <div class="container">
 
   <h1>DNS Resolver Documentation</h1>
@@ -238,5 +242,7 @@ docker-compose up --build
   </div>
 
 </div>
+  {% include '_footer.html' %}
+
 </body>
 </html>
