--- a/templates/trace.html
+++ b/templates/trace.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Trace DNS — DNS Resolver</title>
+  <title>DNS Trace</title>
+  <link rel="stylesheet" href="/static/css/style.css">
+  
   <style>
     body {
       background: #121212;
